--- a/sample-app/BlazorStore.Api/BlazorStore.Api.csproj
+++ b/sample-app/BlazorStore.Api/BlazorStore.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorStore.Api.Contracts\BlazorStore.Api.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
