--- a/sample-app/BlazorStore.Client.Web/BlazorStore.Client.Web.csproj
+++ b/sample-app/BlazorStore.Client.Web/BlazorStore.Client.Web.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorStore.Api.Contracts\BlazorStore.Api.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
