--- a/sample-app/BlazorStore.Api/appsettings.json
+++ b/sample-app/BlazorStore.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorStoreDb;Integrated Security=true"
+  }
 }
