Add shared razor class library, hook up project references.

--- a/hybrid-app/BlazorStore.Client.Maui/BlazorStore.Client.Maui.csproj
+++ b/hybrid-app/BlazorStore.Client.Maui/BlazorStore.Client.Maui.csproj
@@ -49,4 +49,8 @@
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BlazorStore.Client.Shared\BlazorStore.Client.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
