--- a/hybrid-app/BlazorStore.Client.Web/BlazorStore.Client.Web.csproj
+++ b/hybrid-app/BlazorStore.Client.Web/BlazorStore.Client.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,11 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="6.0.12" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorStore.Api.Contracts\BlazorStore.Api.Contracts.csproj" />
+    <ProjectReference Include="..\BlazorStore.Client.Shared\BlazorStore.Client.Shared.csproj" />
   </ItemGroup>
 
 </Project>
