--- a/hybrid-app-part1/BlazorStore.Api/Properties/launchSettings.json
+++ b/hybrid-app-part1/BlazorStore.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7278;http://localhost:5278",
+      "applicationUrl": "https://0.0.0.0:7278;http://0.0.0.0:5278",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
